Bug 152991 - PPTX: In Impress after editing the embedded object, the rectangle size is incorrect
Summary: PPTX: In Impress after editing the embedded object, the rectangle size is inc...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords:
Depends on:
Blocks: PPTX-OLE
  Show dependency treegraph
 
Reported: 2023-01-12 12:53 UTC by NISZ LibreOffice Team
Modified: 2023-02-09 11:42 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample file (43.43 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-01-12 12:54 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (67.76 KB, image/png)
2023-01-12 12:54 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-01-12 12:53:47 UTC
Description:
The attached document was created in Powerpoint 365 and contains an embedded DOCX document.
Open it in Impress and double click on the inserted object.
The rectangle of the inserted object will be incorrect. 

Steps to Reproduce:
1. Open the attached document in Impress.
2. Double-click on the inserted object.
3. Close the document opened in the new writer window.


Actual Results:
The inserted object will be stretched. 

Expected Results:
The inserted object size will not be changed.


Reproducible: Always


User Profile Reset: No

Additional Info:
LibreOffice details:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8ae84bb5566e12df64236a116b9d1889d6f5f052
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2023-01-12 12:54:14 UTC
Created attachment 184610 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2023-01-12 12:54:40 UTC
Created attachment 184611 [details]
Screenshot of the problem
Comment 3 Commit Notification 2023-01-17 10:00:57 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fdf95de18ef1891862bdce26669d1ce2c6f24764

tdf#152991 sd: fix oversized rectangle of edited embedded object

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2023-01-19 09:42:28 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fc441f3886330c4ae2abeb67c0758b935ba23f47
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 5 Commit Notification 2023-02-09 11:42:25 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/e553620ceb3bdef3cfa6d1e9fc18ca30c74fe9f7

tdf#152991 sd: fix oversized rectangle of edited embedded object

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.