tdf#152991 sd: fix oversized rectangle of edited embedded object

The embedded object became unusably oversized after editing,
because it was not possible to minimize it by the mouse. Now
the object keeps its original size to avoid of the UX problem.

Note: losing the original zoom of the OLE content is still a problem.

Change-Id: I8b7a2f2a84324bf4de2358ecb5fec5c1f7349155
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145454
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit fdf95de18ef1891862bdce26669d1ce2c6f24764)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145583
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>